Бинарное дерево поиска. Методы добавления, поиска и обхода дерева. [#504983 #562260] - пофиксил методы и кодировку